--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8"/>
+        <link rel="stylesheet" type="text/css" href="main.css">
+        <script src="js/Casper.js"></script>
+        <script src="js/Experiments.js"></script>
+    </head>
+    <body> 
+        <div class="introtext">
+            This webpage and GitHub repository are supplements to the paper "Incentive Analysis of Hybrid PoW/PoS Casper the Friendly Finality Gadget Using PRESTO". The buttons below can be used to produce the numerical results used to create Figures 3 and 4 in the paper. <br> Above all, the underlying code (which can be found at https://github.com/casper-paper/casper-paper.github.io) has been made publicly available to make the paper fully reproducible, and to aid researchers who wish to extend or modify the experiments.
+        </div> 
+        <button style="position:fixed; top: 140px; left:100px" onclick="doExperimentFigure3a()">Figure 3a</button> 
+        <button style="position:fixed; top: 140px; left:200px" onclick="doExperimentFigure3b()">Figure 3b</button> 
+        <button style="position:fixed; top: 170px; left:100px" onclick="doExperimentFigure4a()">Figure 4a</button> 
+        <button style="position:fixed; top: 170px; left:200px" onclick="doExperimentFigure4b()">Figure 4b</button> 
+        <div id="filecontents"></div>
+    </body>
+</html>
+
