--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             This webpage and GitHub repository are supplements to the paper "Incentive Analysis of Hybrid PoW/PoS Casper the Friendly Finality Gadget Using PRESTO". The buttons below can be used to produce the numerical results used to create Figures 3 and 4 in the paper. 
             <br> In particular, when clicking one of the buttons, the numerical experiment will be conducted <b><u>live</u>, in the browser</b>, using the programming code for the paper, which was ported from Java to JavaScript.
             <br> Above all, the underlying JavaScript code (which can be found at https://github.com/casper-paper/casper-paper.github.io, or via "page source" in the browser) has been made publicly available to make the paper fully reproducible, and to aid researchers who wish to extend or modify the experiments.
-            <br>The most important file in the underlying code is Casper.js, which allows for sthe imulation of a censorship attack. Experiment.js details the specific the experiments conducted in the figures.
+            <br>The most important file in the underlying code is Casper.js, which allows for the simulation of a censorship attack. Experiment.js details the specific experiments conducted in the figures.
         </div> 
         <div style ="position:relative;">
             <button style="position:absolute; top: 20px; left:100px" onclick="doExperimentFigure3a()">Figure 3a</button> 
