--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8"/>
         <link rel="stylesheet" type="text/css" href="main.css">
-        <script src="js/Casper.js"></script>
-        <script src="js/Experiments.js"></script>
+        <script src="Casper.js"></script>
+        <script src="Experiments.js"></script>
     </head>
     <body> 
         <div class="introtext">
