--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="introtext">
             This webpage and GitHub repository are supplements to the paper "Incentive Analysis of Hybrid PoW/PoS Casper the Friendly Finality Gadget Using PRESTO". The buttons below can be used to produce the data used to create Figures 3 and 4 in the paper. 
             <br><br>In particular, when clicking one of the buttons, the numerical experiment will be conducted <b><u>live</u>, in the browser</b>, using the programming code for the paper, which was ported from Java to JavaScript.
-            <br><br>The underlying JavaScript code can be found at https://github.com/casper-paper/casper-paper.github.io, or via "page source" in the browser. It has been made publicly available to make the paper fully reproducible, and to aid researchers who wish to extend or modify the experiments.
+            <br><br>The underlying JavaScript code can be found at https://github.com/casper-paper/casper-paper.github.io, or by selecting "page source" in the browser. It has been made publicly available to make the paper fully reproducible, and to aid researchers who wish to extend or modify the experiments.
             <br><br>The most important file in the underlying code is Casper.js, which allows for the simulation of a censorship attack. Experiment.js details the specific experiments conducted to create the figures.
         </div> 
         <div style ="position:relative;">
