--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <link rel="stylesheet" type="text/css" href="main.css">
-        <script src="Casper.js"></script>
-        <script src="Experiments.js"></script>
-    </head>
-    <body> 
-        <div class="introtext">
-            This webpage and GitHub repository are supplements to the paper "Incentive Analysis of Hybrid PoW/PoS Casper the Friendly Finality Gadget Using PRESTO". The buttons below can be used to produce the data used to create Figures 3 and 4 in the paper. 
-            <br><br>In particular, when clicking one of the buttons, the numerical experiment will be conducted <b><u>live</u>, in the browser</b>, using the programming code for the paper, which was ported from Java to JavaScript.
-            <br><br>The underlying JavaScript code can be found at https://github.com/casper-paper/casper-paper.github.io, or by selecting "page source" in the browser. It has been made publicly available to make the paper fully reproducible, and to aid researchers who wish to extend or modify the experiments.
-            <br><br>The most important file in the underlying code is Casper.js, which allows for the simulation of a censorship attack. Experiments.js details the specific experiments conducted to create the figures.
-        </div> 
-        <div style ="position:relative;">
-            <button style="position:absolute; top: 20px; left:100px" onclick="doExperimentFigure3a()">Figure 3a</button> 
-            <button style="position:absolute; top: 20px; left:200px" onclick="doExperimentFigure3b()">Figure 3b</button> 
-            <button style="position:absolute; top: 50px; left:100px" onclick="doExperimentFigure4a()">Figure 4a</button> 
-            <button style="position:absolute; top: 50px; left:200px" onclick="doExperimentFigure4b()">Figure 4b</button> 
-            <div id="filecontents" style="position:absolute; top: 80px" ></div>
-        </div>
-    </body>
+<head>
+    <meta charset="utf-8"/>
+    <link href="main.css" rel="stylesheet" type="text/css">
+    <script src="Casper.js"></script>
+    <script src="Experiments.js"></script>
+</head>
+<body>
+<div class="introtext">
+    This webpage and GitHub repository are supplements to the paper "Incentive Analysis of Hybrid PoW/PoS Casper the
+    Friendly Finality Gadget Using PRESTO". The buttons below can be used to produce the data used to create Figures 3
+    and 4 in the paper.
+    <br><br>In particular, when clicking one of the buttons, the numerical experiment will be conducted <b><u>live</u>,
+    in the browser</b>, using the programming code for the paper, which was ported from Java to JavaScript.
+    <br><br>The underlying JavaScript code can be found at https://github.com/casper-paper/casper-paper.github.io, or by
+    selecting "page source" in the browser. It has been made publicly available to make the paper fully reproducible,
+    and to aid researchers who wish to extend or modify the experiments.
+    <br><br>The most important file in the underlying code is Casper.js, which allows for the simulation of a censorship
+    attack. Experiments.js details the specific experiments conducted to create the figures.
+</div>
+<div style="position:relative;">
+    <button onclick="doExperimentFigure3a()" style="position:absolute; top: 20px; left:100px">Figure 3a</button>
+    <button onclick="doExperimentFigure3b()" style="position:absolute; top: 20px; left:200px">Figure 3b</button>
+    <button onclick="doExperimentFigure4a()" style="position:absolute; top: 50px; left:100px">Figure 4a</button>
+    <button onclick="doExperimentFigure4b()" style="position:absolute; top: 50px; left:200px">Figure 4b</button>
+    <div id="filecontents" style="position:absolute; top: 80px"></div>
+</div>
+</body>
 </html>
 
